# tuimint

./: .gitignore  Cargo.toml  README.md  branding.md  chars.md  package-lock.json  package.json
slides/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
src/: main.rs  main2.rs  message.rs  state.rs  types.rs  wallet.rs
src/backend/: client_handle.rs  database.rs  handler.rs  mod.rs  wallets.rs
src/backend/handlers/: mod.rs  refresh_clients.rs
src/old/: main-backup.rs  rat.rs  wat.rs
src/types/: errors.rs  mod.rs  wallet.rs  wallets.rs
src/ui/: component.rs  key_events.rs  mod.rs  render.rs  root.rs
src/ui/screens/: join.rs  mod.rs  settings.rs  splash.rs  tutorial.rs  wallets.rs
