[package]
name = "tuimint"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
fedimint-api-client = "0.9.1"
fedimint-bip39 = "0.9.1"
fedimint-client = "0.9.1"
fedimint-core = "0.9.1"
fedimint-cursed-redb = "0.9.1"
fedimint-mint-client = "0.9.1"
fedimint-wallet-client = "0.9.1"
futures = "0.3.31"
rand = "0.8.5"
ratatui = "0.29.0"
serde = "1.0.228"
tokio = "1.48.0"
